[package]
name = "ressman"
version = "0.1.0"
authors = ["Jake Martin <ajanimember@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version = "0.24.2", features = ["chrono"]}
chrono = "0.4.19"
log = "0.4"
